objects/Subregion_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Ends_At__c</fullName>
        <label>Ends At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Profile_ID__c</fullName>
        <label>Staff Profile</label>
        <referenceTo>Staff_Profile__c</referenceTo>
        <relationshipLabel>Subregion Assignments</relationshipLabel>
        <relationshipName>Zone_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Starts_At__c</fullName>
        <label>Starts At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subregion_ID__c</fullName>
        <label>Subregion</label>
        <referenceTo>Subregion__c</referenceTo>
        <relationshipLabel>Subregion Assignments</relationshipLabel>
        <relationshipName>Subregion_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Subregion Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Staff_Profile_ID__c</columns>
        <columns>Subregion_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Subregion Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subregion Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>